--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>COLOR GAME</title>
-	<link rel="stylesheet" type="text/css" href="color.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
     <h1>THE GREAT 
@@ -31,6 +31,6 @@
 		<div class="square"></div>
 
 	</div>
-<script type="text/javascript" src="color.js"></script>	
+<script type="text/javascript" src="index.js"></script>	
 </body>
 </html>
